Import of AQUILINA/Data-Pensieve-0.02 from CPAN.
gitpan-cpan-distribution: Data-Pensieve
gitpan-cpan-version:      0.02
gitpan-cpan-path:         AQUILINA/Data-Pensieve-0.02.tar.gz
gitpan-cpan-author:       AQUILINA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Data::Pensieve
 
+0.02  Thu Nov 15 2012
+    - because I'm an idiot and messed up the META.yml
+
 0.01  Thu Nov 15 2012
     - original version
 
