Import of AQUILINA/Data-Pensieve-0.03 from CPAN.
gitpan-cpan-distribution: Data-Pensieve
gitpan-cpan-version:      0.03
gitpan-cpan-path:         AQUILINA/Data-Pensieve-0.03.tar.gz
gitpan-cpan-author:       AQUILINA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -19,6 +19,7 @@ This module requires these other modules and libraries:
     Carp>
     DateTime
     DateTime::Format::MySQL
+    DBI
     DBIx::Class
     List::Util
     List::MoreUtils
